Prevent long topics from overflowing fixed height header.

--- a/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomHeader.scss
+++ b/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomHeader.scss
@@ -22,7 +22,7 @@ limitations under the License.
 .mx_RoomHeader_wrapper {
     max-width: 960px;
     margin: auto;
-    height: 73px;
+    height: 70px;
     align-items: center;
     display: flex;
 }
@@ -176,7 +176,7 @@ limitations under the License.
 .mx_RoomHeader_topic {
     vertical-align: bottom;
     float: left;
-    max-height: 42px;
+    max-height: 38px;
     color: $settings-grey-fg-color;
     font-weight: 300;
     font-size: 13px;
